[package]
name = "myfirstrustgame"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Perez <iperero92@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
sdl2 = "*"
default-features = false
features = ["image"]
